crates/knok/tests/ui/invalid_backend_path.stderr
error: unsupported backend path; expected Backend::LlvmCpu or Backend::MetalSpirv
 --> tests/ui/invalid_backend_path.rs:4:13
  |
4 |     backend(RuntimeConfig::LlvmCpu),
  |             ^^^^^^^^^^^^^

warning: unused import: `knok::prelude::*`
 --> tests/ui/invalid_backend_path.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
